<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity7">


    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="412dp"
        android:layout_height="112dp"
        android:layout_marginTop="-1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/uptasar__1_" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar3"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="411dp"
        android:layout_height="77dp"
        android:layout_gravity="bottom"
        android:background="@color/anaColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/setget2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="28dp"
        android:background="@drawable/aaasetting"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/bottomAppBar3"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar3"
        app:layout_constraintVertical_bias="0.51" />

    <Button
        android:id="@+id/locget2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/bbblocation"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonHomethree"
        app:layout_constraintStart_toEndOf="@+id/setget2"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar3" />

    <Button
        android:id="@+id/buttonHomethree"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/aaahome"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/bottomAppBar3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar3" />

    <Button
        android:id="@+id/mesget2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/aaafeedback"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/useget2"
        app:layout_constraintStart_toEndOf="@+id/buttonHomethree"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar3" />

    <Button
        android:id="@+id/useget2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/aaauser"
        android:text="Button"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bottomAppBar3"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar3"
        app:layout_constraintVertical_bias="0.51" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="281dp"
        android:layout_height="369dp"
        android:background="@color/anaColor"
        app:layout_constraintBottom_toBottomOf="@+id/bottomAppBar3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="254dp"
            android:layout_height="79dp"
            android:layout_marginTop="16dp"
            android:background="@color/anaColorbbbb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.592"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView114"
                android:layout_width="77dp"
                android:layout_height="56dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.09"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.478"
                app:srcCompat="@drawable/aaatechnical" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/problem"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView114"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/button29"
            android:layout_width="105dp"
            android:layout_height="93dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/elektrik"
            android:textSize="11sp"
            app:backgroundTint="@color/anaColorbbbb"
            app:layout_constraintBottom_toTopOf="@+id/button31"
            app:layout_constraintEnd_toStartOf="@+id/button30"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/button30"
            android:layout_width="105dp"
            android:layout_height="93dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/su"
            android:textSize="11sp"
            app:backgroundTint="@color/anaColorbbbb"
            app:layout_constraintBottom_toTopOf="@+id/button32"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/button31"
            android:layout_width="105dp"
            android:layout_height="93dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/klima"
            android:textSize="11sp"
            app:backgroundTint="@color/anaColorbbbb"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button32"
            android:layout_width="105dp"
            android:layout_height="93dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/eşya"
            android:textSize="11sp"
            app:backgroundTint="@color/anaColorbbbb"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>