<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="412dp"
        android:layout_height="112dp"
        android:layout_marginTop="-1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/uptasar__1_" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar5"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="411dp"
        android:layout_height="77dp"
        android:layout_gravity="bottom"
        android:background="@color/anaColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/setget"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/aaasetting"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/bottomAppBar5"
        app:layout_constraintEnd_toStartOf="@+id/buttonHomeone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/bottomAppBar5"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar5"
        app:layout_constraintVertical_bias="0.513" />

    <Button
        android:id="@+id/locget"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/bbblocation"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/bottomAppBar5"
        app:layout_constraintEnd_toStartOf="@+id/buttonHomeone"
        app:layout_constraintStart_toEndOf="@+id/setget"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar5" />

    <Button
        android:id="@+id/buttonHomeone"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/aaahome"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/bottomAppBar5"
        app:layout_constraintEnd_toEndOf="@+id/bottomAppBar5"
        app:layout_constraintStart_toStartOf="@+id/bottomAppBar5"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar5" />

    <Button
        android:id="@+id/mesget"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/aaafeedback"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/bottomAppBar5"
        app:layout_constraintEnd_toStartOf="@+id/useget"
        app:layout_constraintStart_toEndOf="@+id/buttonHomeone"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar5" />

    <Button
        android:id="@+id/useget"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/aaauser"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/bottomAppBar5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/buttonHomeone"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar5"
        app:layout_constraintVertical_bias="0.513" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="281dp"
        android:layout_height="369dp"
        android:background="@color/anaColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView7">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="254dp"
            android:layout_height="79dp"
            android:layout_marginTop="16dp"
            android:background="@color/anaColorbbbb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.481"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="77dp"
                android:layout_height="56dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.169"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.478"
                app:srcCompat="@drawable/aaahousekeeping" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temiz"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView6"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/button3"
            android:layout_width="105dp"
            android:layout_height="93dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/temizlik"
            android:textSize="11sp"
            app:backgroundTint="@color/anaColorbbbb"
            app:layout_constraintBottom_toTopOf="@+id/button5"
            app:layout_constraintEnd_toStartOf="@+id/button4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/button4"
            android:layout_width="105dp"
            android:layout_height="93dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/hızlıtemizlik"
            android:textSize="11sp"
            app:backgroundTint="@color/anaColorbbbb"
            app:layout_constraintBottom_toTopOf="@+id/button16"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/button5"
            android:layout_width="105dp"
            android:layout_height="93dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/çarşaf"
            android:textSize="11sp"
            app:backgroundTint="@color/anaColorbbbb"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button16"
            android:layout_width="105dp"
            android:layout_height="93dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            app:backgroundTint="@color/anaColorbbbb"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>